# MeshHashing

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindGLEW.cmake  FindGlog.cmake
config/: 3dvcr.yml  ICL.yml  PKU.yml  SUN3D.yml  SUN3D_ORIGINAL.yml  TUM1.yml  TUM2.yml  TUM3.yml  args.yml  hash.yml  icl.yml  lights.yaml  mesh.yml  ray_caster.yml  sdf.yml  sdf_params.yml  sensor_3dvcr.yml  sensor_params_icl.yml  sensor_params_tum.yml  sensor_sun3d.yml  sensor_sun3d_ori.yml  sensor_tum1.yml  sensor_tum2.yml  sensor_tum3.yml  sun3d.yml  tum1.yml  tum2.yml  tum3.yml
config/ORB/: ICL.yaml  SUN3D.yaml  SUN3D_ORIGINAL.yaml
config/orb/: 3DVCR.yaml
cuda_util/: helper_math.h
cuda_utils/: helper_cuda.h  helper_math.h  matrix.h
example/: datasets.h  rgbd_orb.cc  voxel_hashing.cc
gl_util/: control.h
gl_utils/: context.cc  context.h  control.cc  control.h  shader.h
include/: .gitignore  README.txt  block.h  color_util.h  common.h  config_reader.h  core.h  dataset_manager.cc  dataset_manager.h  debugger.h  fuser.h  geometry_util.h  gradient.h  hash_param.h  hash_table.h  hash_table_gpu.h  map.h  mapper.h  mc_tables.h  mesh.h  mesher.h  params.h  ray_caster.h  ray_caster.h~  ray_caster_data.h  ray_caster_param.h  renderer.h  sensor.h  sensor_data.h  sensor_param.h  system.h  timer.h
include/cuda/: helper_cuda.h  matrix.h
include/cuda_util/: helper_math.h
include/gl_util/: control.cc  shader.cc
include/opengl/: args.cc  camera.cc  camera.h  model.cc  model.h  program.cc  program.h  texture.cc  texture.h  trajectory.h  uniforms.cc  uniforms.h  window.cc  window.h
shader/: frame_fragment.glsl  line_fragment.glsl  line_vertex.glsl  mesh_fragment.glsl  mesh_vc_vertex.glsl  mesh_vertex.glsl  mesh_vn_fragment.glsl  mesh_vn_vertex.glsl  multi_light_model_fragment.glsl  multi_light_model_vertex.glsl  point_fragment.glsl  point_vertex.glsl  vertex.glsl
src/: README.md  README.txt  block.cu  block.h  common.h  constant.cu  coordinate_utils.h  dataset_manager.cc  dataset_manager.h  debugger.cc  debugger.h  fuser.cu  gradient.h  hash_table.cu  hash_table.h  map.cc  map.cu  map.h  map_core.cu  map_core_impl.cu  map_debug.cu  map_fusion.cu  map_fusion_impl.cu  map_mesh.cu  map_mesh_impl.cu  map_plane.cu  mapper.cc  mapper.cu  mc_tables.h  mesh.cu  mesh.h  mesher.cc  projection_utils.h  ray_caster.cc  ray_caster.cu  ray_caster.h  renderer.cc  renderer.h  sensor.cc  sensor.cu  (+2 more)
src/app/: Block_Analysis.cc  block_analysis.cc  mesh_hashing.cc  orb_slam.cc  orb_slam2.cc  reconstruction.cc  rgbd_orb.cc  slam.cc
src/core/: block.cu  block.h  block_array.cu  block_array.h  collect.cu  collect_block_array.cu  collect_block_array.h  common.h  entry_array.cu  entry_array.h  hash_entry.h  hash_table.cu  hash_table.h  mesh.cu  mesh.h  params.h  triangle.h  vertex.h  voxel.h
src/cuda/: helper_cuda.h
src/engine/: localizing_engine.cc  localizing_engine.h  logging_engine.cc  logging_engine.h  main_engine.cc  main_engine.h  map.h  map_core.cu  mapping_engine.cc  mapping_engine.h  meshing_engine.cc  meshing_engine.h  sensor.cu  sensor.h  visualizing_engine.cc  visualizing_engine.h
src/example/: datasets.h  mesh_hashing.cc  rgbd_orb.cc  voxel_hashing.cc
src/fusion/: map_fusion.cu
src/geometry/: coordinate_utils.h  geometry_helper.h  gradient.h  isosurface_intersection.h  primal_dual_query.h  spatial_query.h  voxel_query.h
src/io/: config_manager.cc  config_manager.h  dataset_manager.cc  dataset_manager.h  mesh_writer.cc  mesh_writer.h  video_writer.cc  video_writer.h
src/localizing/: point_to_psdf.cu  point_to_psdf.h
src/mapping/: allocate.cu  allocate.h  collect.cu  collect.h  fusion.cu  fusion.h  recycle.cu  recycle.h  update.cu  update.h  update_bayesian.cu  update_bayesian.h  update_convex.cu  update_convex.h  update_probabilistic.cu  update_probabilistic.h  update_simple.cu  update_simple.h
src/meshing/: map_mesh.cu  marching_cubes.cu  marching_cubes.h  mc_tables.h
src/opengl/: args.cc  args.h  camera.cc  program.cc  texture.cc  trajectory.cc  uniform.cc  uniform.h  uniforms.cc  uniforms.h  window.h
src/optimize/: linear_equations.cu  linear_equations.h  primal_dual.cu  primal_dual.h
src/sensor/: kinect_stream.cc  kinect_stream.h  preprocess.cu  preprocess.h  rgbd_data_provider.cc  rgbd_data_provider.h  rgbd_local_sequence.cc  rgbd_local_sequence.h  rgbd_network_stream.cc  rgbd_network_stream.h  rgbd_sensor.cu  rgbd_sensor.h  structure_stream.cc  structure_stream.h
src/unit_test/: block_visualizer.cc  cuda_gl_interp.cc  test_db.cc  video_clip.cc
src/util/: block_visualizer.cc  cuda_gl_interp.cc  debugger.cc  debugger.h  map_debug.cu  video_clip.cc
src/visualization/: bounding_box.cu  bounding_box.h  color_util.h  colorize.cu  colorize.h  compact_mesh.cc  compact_mesh.cu  compact_mesh.h  compress_mesh.cu  compress_mesh.h  extract_bounding_box.cu  extract_bounding_box.h  ray_caster.cu  ray_caster.h  trajectory.cu  trajectory.h
test/: config_reader.h  cuda_gl_interp.cc  datasets.h  line_renderer.cc  rgbd_orb.cc  rgbd_tum.cc  sdf_params.yml  test_cuda_gl.cc  test_voxel_hashing.cc  test_voxel_hashing_loop.cc  voxel_hashing.cc  voxel_hashing_cli.cc
test/test_core/: test_core.cc  test_core.cu  test_core.h
test/test_hash_table/: test_hash_table.cc  test_hash_table.cu  test_hash_table.h
tool/cpp/: analyze_block.cc  block_analyzer.cc  block_analyzer.h  debugger.cc  debugger.h
